<resources>
<<<<<<< Updated upstream
    <string name="app_name">PROG_POE_2025</string>
=======
    <string name="app_name">PennyWise</string>
    <string name="logo_description">App Logo</string>
    <string name="email_hint">Enter Email Address</string>
    <string name="password_hint">Enter Password</string>
    <string name="register_text">I don\'t have an account</string>
    <string name="button_login_text">Login</string>
    <string name="app_catchphrase">App Catchphrase</string>
    <string name="register_heading">Register</string>
    <string name="reg_name_hint">Enter your name</string>
    <string name="reg_surname_hint">Enter your surname</string>
    <string name="reg_phone_hint">Enter your number</string>
    <string name="reg_email_hint">Enter your email address</string>
    <string name="reg_password_hint">Create password</string>
    <string name="reg_password_confirm_hint">Confirm password</string>
    <string name="reg_button_text">Done</string>
    <string name="txtMyAmount">0.0</string>
    <string name="txtTotalExpenses">0.0</string>
    <string name="txtTotalIncome">0.0</string>
    <string name="txtIncome">Income</string>
    <string name="txtExpense">Expenses</string>
    <string name="txtProfit">Net Profit</string>
    <string name="btnCreateBudget">Create New Budget</string>
    <string name="btnViewBudgets">View Budgets</string>
    <string name="btnLogExpInc">Log Income / Expense</string>
    <string name="btnGenerateReport">Generate Report</string>
    <string name="btnLogOut">Log Out</string>
    <string name="swchHideAmounts">Hide Amounts</string>
    <string name="btnQuiz">Budget Quiz</string>
    <string name="swchDayNight">Day Mode</string>
    <string name="btnStreakAmount">0</string>
    <string name="btnNotificationAmount">0</string>
    <string name="txtCreateBranch">Create New Branch</string>
    <string name="txtSpnCategory">Budget Type</string>
    <string name="edtNameofBudget">Name Your Budget</string>
    <string name="edtTotAmount">Total Budget Amount</string>
    <string name="btnSelectPeriod">Budget Period</string>
    <string name="txtLogAmount">Enter Amount</string>
    <string name="txtDescription">Description</string>
    <string name="btnLogDate">Select Date</string>
    <string name="txtLinkImage">Optionally add image</string>
    <string name="txtLogPage">Log Transaction</string>
    <string name="btnLogDone">Done</string>
    <string-array name="category_list">
        <item>Groceries</item>
        <item>Entertainment</item>
        <item>Transport</item>
        <item>Health</item>
        <item>Utilities</item>
        <item>Dining</item>
        <item>Salary</item>
        <item>Miscellaneous</item>
    </string-array>
    <string-array name="transaction_types">
        <item>Cash</item>
        <item>EFT</item>
        <item>Credit Card</item>
        <item>Debit Card</item>
        <item>Bank Transfer</item>
        <item>PayPal</item>
        <item>Other</item>
    </string-array>
<<<<<<< Updated upstream
>>>>>>> Stashed changes
=======
>>>>>>> Stashed changes
</resources>