<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckgrnd3"
    tools:context=".Home">

    <!-- LinearLayout container for all UI elements -->
    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_editor_absoluteX="16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerOther"
            android:layout_width="match_parent"
            android:layout_height="90dp"



            app:layout_constraintTop_toTopOf="parent">



            <ImageButton
                android:id="@+id/btnSettings"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="Settings Button"
                android:src="@drawable/baseline_settings_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnStreak"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnHideUnhide"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnNotification"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/eye" />

            <ImageButton
                android:id="@+id/btnStreak"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="145dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/transparent"
                android:src="@drawable/star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnSettings"
                app:layout_constraintStart_toEndOf="@+id/btnNotification"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnNotification"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@android:color/transparent"
                android:src="@drawable/bell"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnStreak"
                app:layout_constraintStart_toEndOf="@+id/btnHideUnhide"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerTextViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:background="@drawable/card"
            app:layout_constraintTop_toBottomOf="@id/containerOther">

            <TextView
                android:id="@+id/txtMyProfit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bokor"
                android:text="@string/txtTotalIncome"
                android:textColor="@color/white"
                android:textSize="55sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtGross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:fontFamily="@font/tiro_devanagari_marathi"
                android:text="@string/txtProfit"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMyProfit" />

            <TextView
                android:id="@+id/txtMyMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:fontFamily="@font/bokor"
                android:text="@string/txtMyAmount"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtGross" />

            <TextView
                android:id="@+id/txtExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:fontFamily="@font/tiro_devanagari_marathi"
                android:text="@string/txtExpense"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMyMoney" />

            <TextView
                android:id="@+id/txtMyExpenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:fontFamily="@font/bokor"
                android:text="@string/txtTotalExpenses"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtExpense" />

            <TextView
                android:id="@+id/txtProfit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:fontFamily="@font/tiro_devanagari_marathi"
                android:text="@string/txtIncome"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMyExpenses" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Container for Main Buttons -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerButtons"
            android:layout_width="match_parent"
            android:layout_height="400dp"

            android:layout_marginBottom="0dp"
>

            <Button
                android:id="@+id/btnCreateBudget"
                android:layout_width="130dp"
                android:layout_height="50dp"

                android:layout_marginStart="20dp"

                android:layout_marginTop="16dp"
                android:backgroundTint="#A080DF"
                android:text="@string/btnCreateBudget"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnViewBudgets"
                android:layout_width="130dp"
                android:layout_height="50dp"

                android:layout_marginStart="88dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#A080DF"
                android:drawablePadding="20dp"
                android:text="@string/btnViewBudgets"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/btnCreateBudget"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnGenerateReport"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="#6388B4"
                android:text="@string/btnGenerateReport"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnCreateBudget" />

            <Button
                android:id="@+id/btnLogExpInc"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="#6388B4"
                android:text="@string/btnLogExpInc"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnGenerateReport" />

            <Button
                android:id="@+id/btnBudgetQuiz"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:drawableLeft="@drawable/budget_quiz"
                android:text="@string/btnQuiz"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogExpInc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
