<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_theme"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toTopOf="@+id/txtAppName"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        app:srcCompat="@drawable/logo5" />

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/bokor"
        android:gravity="center_horizontal"
        android:text="PENNYWISE"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText

        android:id="@+id/editEmail"
        android:layout_width="362dp"
        android:layout_height="58dp"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="12dp"
        android:autoSizeMaxTextSize="12dp"
        android:autoSizeMinTextSize="10dp"
        android:autofillHints=""
        android:background="@drawable/et_style"
        android:backgroundTint="#F8F6F6"
        android:ems="10"
        android:gravity="fill_vertical"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:labelFor="@id/editPassword"
        android:minHeight="50dp"
        android:padding="15dp"
        android:textColorHint="#999090"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="359dp"
        android:layout_height="61dp"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:background="@drawable/et_style"

        android:backgroundTint="#F8F6F6"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="15dp"
        android:textColorHint="#999090"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/txtToRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <TextView
        android:id="@+id/txtToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/register_text"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="89dp"
        android:background="@drawable/round"
        android:gravity="center_horizontal"
        android:text="@string/button_login_text"
        android:textColor="#F0ECEC"
        android:textColorLink="#262323"
        app:iconTint="#7E6F6F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtToRegister"
        app:strokeColor="#B36D6D" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="57dp"
        android:fontFamily="@font/tiro_devanagari_marathi"
        android:text="Precision in Every Penny, Power in Every Decision"
        app:layout_constraintBottom_toTopOf="@+id/editEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName" />
</androidx.constraintlayout.widget.ConstraintLayout>