<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateBudget">

    <!-- Title TextView for the page -->
    <TextView
        android:id="@+id/txtCreateBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="47dp"
        android:text="@string/txtCreateBranch"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Spinner for selecting categories -->

    <!-- Category label TextView -->

    <!-- EditText for entering budget name -->

    <Spinner
        android:id="@+id/spinCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toTopOf="@+id/edtNameBudget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCategory" />

    <TextView
        android:id="@+id/txtCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/txtSpnCategory"
        app:layout_constraintBottom_toTopOf="@+id/spinCategories"
        app:layout_constraintEnd_toEndOf="@+id/spinCategories"
        app:layout_constraintStart_toStartOf="@+id/spinCategories"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateBudget" />

    <!-- Button to select date range for the budget -->
    <EditText
        android:id="@+id/edtNameBudget"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/edtNameofBudget"
        app:layout_constraintBottom_toTopOf="@+id/btnSelectDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinCategories" />

    <!-- EditText to filter categories -->
    <Button
        android:id="@+id/btnSelectDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="34dp"
        android:text="@string/btnSelectPeriod"
        app:layout_constraintBottom_toTopOf="@+id/searchEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNameBudget" />

    <android.widget.EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="9dp"
        android:hint="Categories To Include"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/categoryRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectDate" />

    <!-- RecyclerView to display categories -->

    <!-- EditText for total budget amount -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecyclerView"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="47dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="Total Budget Amount"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btnAddBudget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryRecyclerView" />

    <Button
        android:id="@+id/btnAddBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:text="Add Budget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

</androidx.constraintlayout.widget.ConstraintLayout>

